--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -6,7 +6,7 @@
       "name": "HW5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOvbQ3v+BnqtRJBfG+bI2CZ",
+      "authorship_tag": "ABX9TyMUHc2fVj+oKd/8haq42dDY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 300,
+      "execution_count": 12,
       "metadata": {
         "id": "ieBYI4DpY8YX"
       },
@@ -77,13 +77,14 @@
       "metadata": {
         "id": "t3WA-TzdkcMF"
       },
-      "execution_count": 301,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "q, r = np.linalg.qr(arr) \n",
+        "q, r = np.linalg.qr(arr)\n",
+        "\n",
         "print('\\nQ: \\n', q)\n",
         "print('\\nR: \\n', r)\n",
         "\n",
@@ -98,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gy2At9sNbNae",
-        "outputId": "6bd690d8-2fe6-4123-f523-ac9e9e38890f"
+        "outputId": "77762a11-a192-4b18-d9b1-9caa103dfc89"
       },
-      "execution_count": 302,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,17 +149,21 @@
         "    \n",
         "    \n",
         "    for i in range(0, A.shape[1]):\n",
+        "\n",
         "        R[i, i] = np.sqrt(np.dot(A[:, i], A[:, i]))\n",
-        "        Q[:, i] = A[:, i]/R[i, i]\n",
+        "        Q[:, i] = A[:, i] / R[i, i]\n",
+        "        \n",
         "        for j in range(i+1, A.shape[1]):\n",
+        "            \n",
         "            R[i, j] = np.dot(Q[:, i], A[:, j])\n",
-        "            A[:, j] = A[:, j] - R[i, j]*Q[:, i]\n",
+        "            A[:, j] = A[:, j] - R[i, j] * Q[:, i]\n",
+        "    \n",
         "    return Q, R\n"
       ],
       "metadata": {
         "id": "9HfcFWt3ai4P"
       },
-      "execution_count": 303,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -180,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQvSWCX0ayPO",
-        "outputId": "c572a73b-3613-469a-e9c7-f2e1536717b7"
+        "outputId": "49d44a2b-5351-446b-a88f-c1a34ef575ef"
       },
-      "execution_count": 304,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,22 +235,29 @@
         "    \n",
         "\n",
         "    for j in range(n):\n",
-        "        v = A[:, j]\n",
+        "\n",
+        "        x = A[:, j]\n",
         "\n",
         "        for i in range(j - 1):\n",
+        "            \n",
         "            q = Q[:, i]\n",
-        "            R[i, j] = q.dot(v)\n",
-        "            v = v - R[i, j] * q\n",
+        "            \n",
+        "            R[i, j] = q.dot(x)\n",
+        "            \n",
+        "            x = x - R[i, j] * q\n",
         "\n",
-        "        length = np.linalg.norm(v)\n",
-        "        Q[:, j] = v / length\n",
+        "        length = np.linalg.norm(x)\n",
+        "        \n",
         "        R[j, j] = length\n",
+        "        Q[:, j] = x / length\n",
+        "        \n",
         "\n",
         "    return Q, R\n",
         "\n",
         "QR_fact(arr)\n",
         "\n",
         "Q2, R2 = QR_fact(arr)\n",
+        "\n",
         "print('\\nQ: \\n', Q2)\n",
         "print('\\nR: \\n', R2)\n",
         "\n",
@@ -260,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HI-L3skDhMNG",
-        "outputId": "d454409b-6f45-4139-d848-baa62cdbb381"
+        "outputId": "671023e0-4778-44af-996e-23854af17205"
       },
-      "execution_count": 305,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +317,7 @@
       "metadata": {
         "id": "vwQ6z92wvLUM"
       },
-      "execution_count": 305,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -336,7 +348,9 @@
         "somearray = np.array([[1, 2, 3], \n",
         "              [4, 5, 6],\n",
         "              [7, 8, 9]])\n",
-        "l,x=np.linalg.eig(somearray)\n",
+        "\n",
+        "l, x = np.linalg.eig(somearray)\n",
+        "\n",
         "print('Eigenvalue: ', l)\n",
         "print('\\nEigenvector: ', x)\n",
         "\n",
@@ -353,9 +367,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pE3S64wW70Px",
-        "outputId": "be8638b5-9e26-4e3c-bfe4-4bfa23fcd71f"
+        "outputId": "ed9a4fa3-4a39-4bd3-9f0a-c9a22e0a5782"
       },
-      "execution_count": 306,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +412,7 @@
       "metadata": {
         "id": "8FoNAVEN84Sr"
       },
-      "execution_count": 306,
+      "execution_count": 18,
       "outputs": []
     }
   ]
