--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -6,7 +6,7 @@
       "name": "HW5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHxC7WoeP78T2FlrQhm4MF",
+      "authorship_tag": "ABX9TyPmybgtF4Dj7tXAd1EY8K2h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {
         "id": "ieBYI4DpY8YX"
       },
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "t3WA-TzdkcMF"
       },
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gy2At9sNbNae",
-        "outputId": "fc094d44-6cd4-4bb6-f218-c3eb60473394"
+        "outputId": "29b09ad5-1d5e-4339-cc21-15ebbb705d64"
       },
-      "execution_count": 20,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "9HfcFWt3ai4P"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -185,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQvSWCX0ayPO",
-        "outputId": "431ef3ef-b31e-4836-d301-3b68172d012b"
+        "outputId": "09680894-aa0a-49e2-9de4-05315250f09f"
       },
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,9 +273,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HI-L3skDhMNG",
-        "outputId": "f3891747-15d7-45e9-b667-aaaf03eae768"
+        "outputId": "790a76ba-c0e2-4aea-ee2c-63853bb77f20"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "vwQ6z92wvLUM"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -366,9 +366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pE3S64wW70Px",
-        "outputId": "62ef6dac-b45a-406d-f04d-2bd36eea869d"
+        "outputId": "2b714834-ef92-4e9a-e30e-f59d746fbd7d"
       },
-      "execution_count": 24,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,7 +411,87 @@
       "metadata": {
         "id": "8FoNAVEN84Sr"
       },
-      "execution_count": 24,
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Additional example***"
+      ],
+      "metadata": {
+        "id": "eWoVbAe4UVxp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Get the largest eigenvalue and eigenvector for matrix A = [[2, 1, 2], [1, 3, 2], [2, 4, 1]] using the power method. You can start with initial vector [1, 1, 1], see what you will get after eight iterations.*"
+      ],
+      "metadata": {
+        "id": "JDHXI2pzUa4l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def norm(z):\n",
+        "  #This function takes in a vector as an argument\n",
+        "  d = abs(z).max()\n",
+        "  #This takes in the absolute value of the maximum value of the vector (eigenvalue)\n",
+        "  z_n = z / z.max()\n",
+        "  #This then divides the vector by that maximum eigenvalue in order to result in the eigenvector\n",
+        "  return d, z_n\n",
+        "  #This returns the eigenvector along with the maximum eigenvalue\n",
+        "\n",
+        "q = np.array([1, 1, 1])\n",
+        "#The inital vector is stored as variable 'q'\n",
+        "\n",
+        "matrix = [[2, 1, 2], [1, 3, 2], [2, 4, 1]]\n",
+        "#The matrix A is stored as the variable 'matrix'\n",
+        "\n",
+        "for j in range(8):\n",
+        "  q = np.dot(matrix, q)\n",
+        "  v, q = norm(q)\n",
+        "#This loop performs eight iterations of the function 'norm'\n",
+        "\n",
+        "\n",
+        "\n",
+        "print('Eigenvector: ', q)\n",
+        "\n",
+        "print('Eigenvalue: ', v)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DVSaBWg7UZMG",
+        "outputId": "5244e44d-2c86-440a-cade-8b3199952284"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvector:  [0.71918849 0.8976852  1.        ]\n",
+            "Eigenvalue:  6.029088043137578\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ftibUBvLblRA"
+      },
+      "execution_count": 31,
       "outputs": []
     }
   ]
