--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -6,7 +6,7 @@
       "name": "HW6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5XAsVYRJ+UXjoilHAiOGJ",
+      "authorship_tag": "ABX9TyPLlxP8CJmYH7La+CPfSDop",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "id": "PrPpGfSSENoX"
       },
@@ -89,9 +89,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQ78ZQ3dGKQ7",
-        "outputId": "a39e1feb-6c78-450a-b1e1-a989e61a5ebf"
+        "outputId": "7c4a0a75-ada3-41b0-e594-fe95a4b871af"
       },
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,11 +108,202 @@
     {
       "cell_type": "markdown",
       "source": [
-        "-"
+        "*Write the Taylor series expansion for e^(x^2) around a = 0. Write a function my_double_exp(x, n), which computes an approximation of e(x^2) using the first n terms of the Taylor series expansion. Be sure that my_double_exp can take array inputs.*"
       ],
       "metadata": {
         "id": "24ctt3eHKtvD"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def my_double_exp(x, n):\n",
+        "  for j, k in zip(x, n):\n",
+        "    e = 0\n",
+        "    tmpvariable = j\n",
+        "\n",
+        "    for eqorder in range(k):\n",
+        "      e = e + (tmpvariable)**(2*eqorder) / np.math.factorial(eqorder)\n",
+        "    \n",
+        "    print(\"Using first\", k, end = \" \")\n",
+        "    print(\"term(s) for x =\", j, end = \" \")\n",
+        "    print(\"the approximation is\", e)\n",
+        "\n",
+        "my_double_exp([3, 3, 3, 3], [1, 5, 15, 30])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bEQs1ggi-UXI",
+        "outputId": "4df33de7-adea-46aa-d9a5-60873bff4e19"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using first 1 term(s) for x = 3 the approximation is 1.0\n",
+            "Using first 5 term(s) for x = 3 the approximation is 445.375\n",
+            "Using first 15 term(s) for x = 3 the approximation is 7767.078812100289\n",
+            "Using first 30 term(s) for x = 3 the approximation is 8103.08370349121\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Actual value of e^(2^2) is: \", np.exp(3**2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UVw5e370SK6o",
+        "outputId": "bdea2106-3cfc-442e-fc85-0ac890cb9140"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Actual value of e^(2^2) is:  8103.083927575384\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Write a function that gives the Taylor series approximation to the np.exp function around 0 for order 1 through 7. Calculate the truncation error bound for order 7.*"
+      ],
+      "metadata": {
+        "id": "3iTCKH48UwHR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "x = 3\n",
+        "e_2_t = 0\n",
+        "\n",
+        "for j in range(7):\n",
+        "  e_2_t += x**j / math.factorial(j)\n",
+        "  print(f\"Using {j+1} term(s) when x is 3 = {e_2_t}\")\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "print(\"The value using Taylor series when x is 3 =\", e_2_t)\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "npe = np.exp(3)\n",
+        "\n",
+        "print(\"The value using NumPy when x is 3 =\", npe)\n",
+        "print(\"\\n\")\n",
+        "err = abs(e_2_t - np.exp(3))\n",
+        "print(\"The truncation error when x is 3 =\", err)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f2eERJ36V4bj",
+        "outputId": "d8ec6635-1992-43a8-89e9-f9b897599e47"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using 1 term(s) when x is 3 = 1.0\n",
+            "Using 2 term(s) when x is 3 = 4.0\n",
+            "Using 3 term(s) when x is 3 = 8.5\n",
+            "Using 4 term(s) when x is 3 = 13.0\n",
+            "Using 5 term(s) when x is 3 = 16.375\n",
+            "Using 6 term(s) when x is 3 = 18.4\n",
+            "Using 7 term(s) when x is 3 = 19.412499999999998\n",
+            "\n",
+            "\n",
+            "The value using Taylor series when x is 3 = 19.412499999999998\n",
+            "\n",
+            "\n",
+            "The value using NumPy when x is 3 = 20.085536923187668\n",
+            "\n",
+            "\n",
+            "The truncation error when x is 3 = 0.67303692318767\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Use the 4th order Taylor series to approximate cos(0.2) and determine the truncation error bound.*"
+      ],
+      "metadata": {
+        "id": "gkvm6ymZpKpW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import math\n",
+        "\n",
+        "def cosf(x, n):\n",
+        "  approxcos = 0\n",
+        "  \n",
+        "  for j in range(n):\n",
+        "    co = (-1)**j\n",
+        "    number = x**(2*j)\n",
+        "\n",
+        "    d = math.factorial(2*j)\n",
+        "    approxcos += (co) * (number / d)\n",
+        "  \n",
+        "  return approxcos\n",
+        "\n",
+        "appcos = cosf(0.2, 4)\n",
+        "print(\"The approximated value is:\", appcos)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "npcos = np.cos(0.2)\n",
+        "print(\"The value calculated through NumPy is:\", npcos)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "print(\"The truncation error bound =\", abs(appcos - npcos))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-BC5F0LLpQ3H",
+        "outputId": "8c5768ff-24c5-46c5-edea-9833678faaf7"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The approximated value is: 0.9800665777777777\n",
+            "\n",
+            "\n",
+            "The value calculated through NumPy is: 0.9800665778412416\n",
+            "\n",
+            "\n",
+            "The truncation error bound = 6.346390080125275e-11\n"
+          ]
+        }
+      ]
     }
   ]
 }
