--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -6,7 +6,7 @@
       "name": "HW6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLlxP8CJmYH7La+CPfSDop",
+      "authorship_tag": "ABX9TyPftuGY8armca8MvDniuvhf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 118,
       "metadata": {
         "id": "PrPpGfSSENoX"
       },
@@ -82,16 +82,18 @@
         "\n",
         "sol0_001 = np.sin(0.001) / (0.001)\n",
         "\n",
-        "print ('At x = 0.001 :', sol0_001)"
+        "print ('At x = 0.001 :', sol0_001)\n",
+        "\n",
+        "print(\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQ78ZQ3dGKQ7",
-        "outputId": "7c4a0a75-ada3-41b0-e594-fe95a4b871af"
+        "outputId": "d5fa9498-5030-4d15-91d8-b42bbf544257"
       },
-      "execution_count": 94,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +102,9 @@
             "At x = 0.01 : 0.9999833334166665\n",
             "\n",
             "\n",
-            "At x = 0.001 : 0.9999998333333416\n"
+            "At x = 0.001 : 0.9999998333333416\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -131,16 +135,16 @@
         "    print(\"term(s) for x =\", j, end = \" \")\n",
         "    print(\"the approximation is\", e)\n",
         "\n",
-        "my_double_exp([3, 3, 3, 3], [1, 5, 15, 30])"
+        "my_double_exp([3, 3, 3, 3], [1, 5, 15, 30])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bEQs1ggi-UXI",
-        "outputId": "4df33de7-adea-46aa-d9a5-60873bff4e19"
+        "outputId": "26855d2b-8599-4e3f-d192-6b9f63172c0a"
       },
-      "execution_count": 95,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,22 +161,26 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Actual value of e^(2^2) is: \", np.exp(3**2))"
+        "print(\"Actual value of e^(2^2) is: \", np.exp(3**2))\n",
+        "\n",
+        "print(\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVw5e370SK6o",
-        "outputId": "bdea2106-3cfc-442e-fc85-0ac890cb9140"
+        "outputId": "b26105ab-4a40-4f6a-f811-e1671ee37331"
       },
-      "execution_count": 96,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Actual value of e^(2^2) is:  8103.083927575384\n"
+            "Actual value of e^(2^2) is:  8103.083927575384\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -207,16 +215,18 @@
         "print(\"The value using NumPy when x is 3 =\", npe)\n",
         "print(\"\\n\")\n",
         "err = abs(e_2_t - np.exp(3))\n",
-        "print(\"The truncation error when x is 3 =\", err)"
+        "print(\"The truncation error when x is 3 =\", err)\n",
+        "\n",
+        "print(\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2eERJ36V4bj",
-        "outputId": "d8ec6635-1992-43a8-89e9-f9b897599e47"
+        "outputId": "1a565a4a-6e8f-4cfb-a530-9a767c69d8b8"
       },
-      "execution_count": 97,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +247,9 @@
             "The value using NumPy when x is 3 = 20.085536923187668\n",
             "\n",
             "\n",
-            "The truncation error when x is 3 = 0.67303692318767\n"
+            "The truncation error when x is 3 = 0.67303692318767\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -279,16 +291,18 @@
         "\n",
         "print(\"\\n\")\n",
         "\n",
-        "print(\"The truncation error bound =\", abs(appcos - npcos))"
+        "print(\"The truncation error bound =\", abs(appcos - npcos))\n",
+        "\n",
+        "print(\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-BC5F0LLpQ3H",
-        "outputId": "8c5768ff-24c5-46c5-edea-9833678faaf7"
+        "outputId": "cbd6b4b6-dc91-4d05-f067-14897498a386"
       },
-      "execution_count": 98,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +314,9 @@
             "The value calculated through NumPy is: 0.9800665778412416\n",
             "\n",
             "\n",
-            "The truncation error bound = 6.346390080125275e-11\n"
+            "The truncation error bound = 6.346390080125275e-11\n",
+            "\n",
+            "\n"
           ]
         }
       ]
