--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -6,7 +6,7 @@
       "name": "HW6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPftuGY8armca8MvDniuvhf",
+      "authorship_tag": "ABX9TyMZZRJ2//dQSvesYN4erBGw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 123,
       "metadata": {
         "id": "PrPpGfSSENoX"
       },
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**HW6**"
+        "**HW6**\n"
       ],
       "metadata": {
         "id": "Ir9y13USEPi2"
@@ -84,6 +84,7 @@
         "\n",
         "print ('At x = 0.001 :', sol0_001)\n",
         "\n",
+        "print(\"\\n\")\n",
         "print(\"\\n\")"
       ],
       "metadata": {
@@ -91,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQ78ZQ3dGKQ7",
-        "outputId": "d5fa9498-5030-4d15-91d8-b42bbf544257"
+        "outputId": "ad029322-a65f-4133-b85c-b25abd734b08"
       },
-      "execution_count": 119,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,6 +104,8 @@
             "\n",
             "\n",
             "At x = 0.001 : 0.9999998333333416\n",
+            "\n",
+            "\n",
             "\n",
             "\n"
           ]
@@ -142,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bEQs1ggi-UXI",
-        "outputId": "26855d2b-8599-4e3f-d192-6b9f63172c0a"
+        "outputId": "e9da2b16-3cd2-41c0-bd20-884cfc85ce08"
       },
-      "execution_count": 120,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,6 +166,7 @@
       "source": [
         "print(\"Actual value of e^(2^2) is: \", np.exp(3**2))\n",
         "\n",
+        "print(\"\\n\")\n",
         "print(\"\\n\")"
       ],
       "metadata": {
@@ -170,15 +174,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVw5e370SK6o",
-        "outputId": "b26105ab-4a40-4f6a-f811-e1671ee37331"
+        "outputId": "dc4326b0-a323-47b5-ec63-dc404cd5629a"
       },
-      "execution_count": 121,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Actual value of e^(2^2) is:  8103.083927575384\n",
+            "\n",
+            "\n",
             "\n",
             "\n"
           ]
@@ -217,6 +223,7 @@
         "err = abs(e_2_t - np.exp(3))\n",
         "print(\"The truncation error when x is 3 =\", err)\n",
         "\n",
+        "print(\"\\n\")\n",
         "print(\"\\n\")"
       ],
       "metadata": {
@@ -224,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2eERJ36V4bj",
-        "outputId": "1a565a4a-6e8f-4cfb-a530-9a767c69d8b8"
+        "outputId": "17ee498a-fd62-4733-bdb2-393a1acce6ce"
       },
-      "execution_count": 122,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,6 +255,8 @@
             "\n",
             "\n",
             "The truncation error when x is 3 = 0.67303692318767\n",
+            "\n",
+            "\n",
             "\n",
             "\n"
           ]
@@ -300,9 +309,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-BC5F0LLpQ3H",
-        "outputId": "cbd6b4b6-dc91-4d05-f067-14897498a386"
+        "outputId": "56c22bc2-da7e-4a2b-cd12-9149ba245b14"
       },
-      "execution_count": 123,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
