--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -6,7 +6,7 @@
       "name": "HW6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZZRJ2//dQSvesYN4erBGw",
+      "authorship_tag": "ABX9TyMZeL+BXHOmKcEbUwD+LD13",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 153,
       "metadata": {
         "id": "PrPpGfSSENoX"
       },
@@ -42,7 +42,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**HW6**\n"
+        "**HW6**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Ir9y13USEPi2"
@@ -92,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQ78ZQ3dGKQ7",
-        "outputId": "ad029322-a65f-4133-b85c-b25abd734b08"
+        "outputId": "b402ea3b-6954-47ba-ee3b-fa20b931a030"
       },
-      "execution_count": 124,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,6 +127,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
+        "import math\n",
         "\n",
         "def my_double_exp(x, n):\n",
         "  for j, k in zip(x, n):\n",
@@ -145,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bEQs1ggi-UXI",
-        "outputId": "e9da2b16-3cd2-41c0-bd20-884cfc85ce08"
+        "outputId": "5f4d7e24-ed49-4fed-a691-8a4cddde19c9"
       },
-      "execution_count": 125,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVw5e370SK6o",
-        "outputId": "dc4326b0-a323-47b5-ec63-dc404cd5629a"
+        "outputId": "ba35092e-9f38-4b75-d515-7e22fb995b7e"
       },
-      "execution_count": 126,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,6 +207,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
+        "import math\n",
         "\n",
         "x = 3\n",
         "e_2_t = 0\n",
@@ -231,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2eERJ36V4bj",
-        "outputId": "17ee498a-fd62-4733-bdb2-393a1acce6ce"
+        "outputId": "9160e431-ae1b-4c2f-987d-df5d0e2b9e8a"
       },
-      "execution_count": 127,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,9 +313,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-BC5F0LLpQ3H",
-        "outputId": "56c22bc2-da7e-4a2b-cd12-9149ba245b14"
+        "outputId": "6415fa33-6bcc-4534-9739-d8930d3e7456"
       },
-      "execution_count": 128,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
