--- a/matlabtest.ipynb
+++ b/matlabtest.ipynb
@@ -6,7 +6,7 @@
       "name": "matlabtest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLwrb1PQCIGFpF0ZOs9e9S",
+      "authorship_tag": "ABX9TyOuNRvhE+hPDqrC/FXnHw+B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 295,
       "metadata": {
         "id": "ClWVuFaNyu0i"
       },
@@ -58,9 +58,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TAbwm8vQyzI4",
-        "outputId": "1f767609-7d3a-4e07-d143-b73eec96fe41"
+        "outputId": "ecf3f2ae-4de7-4d2e-955e-1d026ee2b28a"
       },
-      "execution_count": 132,
+      "execution_count": 296,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U-9XLEJ2y1Il",
-        "outputId": "2ba322fa-3108-4278-a6d6-4d3ad73aa762"
+        "outputId": "9ae5f282-9b9e-4b05-b3e0-d58ea290f20e"
       },
-      "execution_count": 133,
+      "execution_count": 297,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GiccnDBOzV9N",
-        "outputId": "1cdd8696-5a68-4ae3-877b-79dfcc150f48"
+        "outputId": "4a15df71-8875-483b-a8d6-370852d4311b"
       },
-      "execution_count": 134,
+      "execution_count": 298,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BjU5cBQmzang",
-        "outputId": "73efb74d-8b94-4791-c4ba-e5cee2007e2c"
+        "outputId": "f9bf04de-30d7-4bd3-956e-563f041fb25c"
       },
-      "execution_count": 135,
+      "execution_count": 299,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa5qeObfM1zv",
-        "outputId": "cae08428-c27a-4228-df64-f9be9c72fa1d"
+        "outputId": "58ed3408-1ef0-4eb6-a5dd-ecb7f9f6694e"
       },
-      "execution_count": 136,
+      "execution_count": 300,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,9 +236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xm-l3W-fNreJ",
-        "outputId": "bac2463c-792a-4608-dd4c-017355b889f6"
+        "outputId": "68aaa577-4d68-45cb-d067-c78699b6f415"
       },
-      "execution_count": 137,
+      "execution_count": 301,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,9 +264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdMeRHMxOADK",
-        "outputId": "f1d25654-3d3c-415a-e175-3116496d905d"
+        "outputId": "7428dbd9-8905-44fc-c9ee-0812c49fab8b"
       },
-      "execution_count": 138,
+      "execution_count": 302,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fB_OhkAxf-mk",
-        "outputId": "bd9849b0-c6ac-48ae-f487-8c6e204140ad"
+        "outputId": "a4053062-cad0-4418-984f-ac40865ea087"
       },
-      "execution_count": 139,
+      "execution_count": 303,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,9 +340,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OApagEBG0SMS",
-        "outputId": "5523a896-d849-4acd-8230-668f8c35633f"
+        "outputId": "c460e210-9e24-46cc-bdfe-a72f9e010b38"
       },
-      "execution_count": 140,
+      "execution_count": 304,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,9 +363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UuiHf1c80eFv",
-        "outputId": "24266c74-3096-46da-9fe9-1c2dbf67168c"
+        "outputId": "cf14ac50-ccb3-4d4b-d0a6-4d41af446d4d"
       },
-      "execution_count": 141,
+      "execution_count": 305,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,37 +376,295 @@
             "   0.723606797749975   0.447213595499956\n",
             "   0.447213595499956   0.276393202250020\n",
             "\n",
-            "Elapsed time is 0.037307 seconds.\n",
+            "Elapsed time is 0.027518 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749911   0.447213595499916\n",
             "   0.447213595499916   0.276393202249995\n",
             "\n",
-            "Elapsed time is 0.00376987 seconds.\n",
+            "Elapsed time is 0.00292993 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749932   0.447213595499929\n",
             "   0.447213595499929   0.276393202250003\n",
             "\n",
-            "Elapsed time is 0.000936985 seconds.\n",
+            "Elapsed time is 0.000702143 seconds.\n",
             "ans =\n",
             "\n",
             "   6.57518615256860e+212   4.06368852464505e+212\n",
             "   4.06368852464505e+212   2.51149762792355e+212\n",
             "\n",
-            "Elapsed time is 0.00333619 seconds.\n",
+            "Elapsed time is 0.00245118 seconds.\n",
             "ans =\n",
             "\n",
             "   6.57518615256860e+212   4.06368852464505e+212\n",
             "   4.06368852464505e+212   2.51149762792356e+212\n",
             "\n",
-            "Elapsed time is 0.000901937 seconds.\n",
+            "Elapsed time is 0.000608921 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749911   0.447213595499916\n",
             "   0.447213595499916   0.276393202249995\n",
             "\n",
-            "Elapsed time is 7.70092e-05 seconds.\n"
+            "Elapsed time is 5.19753e-05 seconds.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile fibonacci_direct2.m\n",
+        "function F = fibonacci_direct2(n)\n",
+        "if n==0\n",
+        "  F = 0;\n",
+        "else\n",
+        "  Fn1 = 0; F = 1;\n",
+        "  for k = 2:n\n",
+        "    Fn2 = Fn1; Fn1 = F;\n",
+        "    F = Fn1+Fn2;\n",
+        "  end\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "vnWkc4200nI1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "238e3f5e-d6fe-4a71-8bd5-94f7314a4fcf"
+      },
+      "execution_count": 306,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting fibonacci_direct2.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile fibonacci_direct2edit.m\n",
+        "function F = fibonacci_direct2edit(n)\n",
+        "if n==0\n",
+        "  F = 3;\n",
+        "else\n",
+        "  Fn1 = 3; F = 2;\n",
+        "  for k = 2:n\n",
+        "    Fn2 = Fn1; Fn1 = F;\n",
+        "    F = (2*Fn1) - (rdivide((8*(Fn2)), 9));\n",
+        "  end\n",
+        "end"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WgpQlmYxzVID",
+        "outputId": "95128d19-29b4-4c42-c540-7ee1e69d2c72"
+      },
+      "execution_count": 307,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting fibonacci_direct2edit.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runfib40.m\n",
+        "n = 40;\n",
+        "fibonacci_direct2edit(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7FI39o7Gym1k",
+        "outputId": "fe9bc94f-3b87-4c1a-d117-304ee9c1980c"
+      },
+      "execution_count": 308,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runfib40.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runfib40.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BX0n9vBKycI2",
+        "outputId": "1ffcf4ed-5eb0-4511-f60d-234349f2468b"
+      },
+      "execution_count": 309,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =    2.7133e-07\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runfib60.m\n",
+        "n = 60;\n",
+        "fibonacci_direct2edit(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e8NEL-bVy0Pc",
+        "outputId": "de257183-f049-4961-f292-b4dfb41670c8"
+      },
+      "execution_count": 310,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runfib60.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runfib60.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OH-02Y6N2kQs",
+        "outputId": "7a00abf3-74df-46c7-c8cf-c955869ff7bf"
+      },
+      "execution_count": 311,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =    6.4104e-09\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runfib100.m\n",
+        "n = 100;\n",
+        "fibonacci_direct2edit(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TP3UuuM-3BMH",
+        "outputId": "ef1c2d1c-63a0-4a79-aaa5-53f1ea8fff3a"
+      },
+      "execution_count": 312,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runfib100.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runfib100.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wrbq_kMM36Kc",
+        "outputId": "4e3ff283-68ab-43a6-f9b2-15ea99499d50"
+      },
+      "execution_count": 313,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =    6.2932e-04\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runfib500.m\n",
+        "n = 500;\n",
+        "fibonacci_direct2edit(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D1B7Ahfi38bS",
+        "outputId": "33149aab-e922-4170-f494-b83b29c7d1da"
+      },
+      "execution_count": 314,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runfib500.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runfib500.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Va6w0lrC4Dng",
+        "outputId": "5dd87575-e456-4e35-cb44-bf47564f40b2"
+      },
+      "execution_count": 315,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =    5.9479e+46\n"
           ]
         }
       ]
@@ -417,9 +675,9 @@
         ""
       ],
       "metadata": {
-        "id": "vnWkc4200nI1"
+        "id": "_1_tgHU24H_X"
       },
-      "execution_count": 141,
+      "execution_count": 315,
       "outputs": []
     }
   ]
